2nd python step added on First WF

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,6 +18,6 @@ jobs:
         run: |
          import platform
          print(platform.processor())
-        Shell: python
+        shell: python
           
 
