--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,5 +19,12 @@ jobs:
          import platform
          print(platform.processor())
         shell: python
-          
+  run-windows-command:
+    runs-on: windows-latest
+    steps:
+        - name: Directory Powershell
+          run: Get-location
+        - name: Directory Bash
+          run: pwd
+          shell: bash   
 
