--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,8 +8,8 @@ jobs:
       steps:
           - name: Simple JS Action
             id: greet
-            uses: actions/hello-world-javascript-action@ad41a6c
+            uses: actions/hello-world-javascript-action@main
             with:
               who-to-greet: 'Mona the Octocat'
           - name: Log Greetings Time
-            run: echo "{{ steps.greet.outputs.time }}"
+            run: echo "${{ steps.greet.outputs.time }}"
