--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,10 @@ jobs:
             run: |
               ls -lart
               pwd
+              echo $GITHUB_SHA
+              echo $GITHUB_WORKSPACE
+              echo $GITHUB_REPOSITORY
+              echo $GITHUB_TOKEN
           - name: Checkout
             uses: actions/checkout@v2.3.3
           - name: List the files after checkout
