--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
               echo $GITHUB_SHA
               echo $GITHUB_WORKSPACE
               echo $GITHUB_REPOSITORY
-              echo "${{ github.token }} 
+              echo "${{ github.token }}""
           - name: Checkout
             uses: actions/checkout@v2.3.3
           - name: List the files after checkout
