--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,15 @@
 name: Actions Workflow
+
 on:
-  push:
+
+  schedule:
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
+
+  # push:
+
   pull_request:
       types: [closed, opened, reopened, assigned]
-  issues:
-    types: [assigned, unassigned, opened, reopened, deleted , demilestoned]
 
 jobs:
     run-github-actions:
