--- a/.github/workflows/Env.yml
+++ b/.github/workflows/Env.yml
@@ -3,7 +3,20 @@ on: [push]
 env:
   WF_ENV: Available to all jobs
 jobs:
-    log-env:
+  create_commit:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Create issue using REST API
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/issues \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "title": "Automated issue for commit: ${{ github.sha }}",
+          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+          }'
+  log-env:
       runs-on: ubuntu-latest
       env:
         JOB_ENV: Available to all steps in log-env job
@@ -21,7 +34,7 @@ jobs:
               echo "JOB_ENV: ${JOB_ENV}"
               echo "STEP_ENV: ${STEP_ENV}"
 
-    log-default-env:
+  log-default-env:
        runs-on: ubuntu-latest
        steps:
            - name: Prints all Default Variables
