--- a/.github/workflows/Env.yml
+++ b/.github/workflows/Env.yml
@@ -9,7 +9,7 @@ jobs:
     - name: Push a random file
       run: |
        pwd
-       ls -lart
+       ls -a
        git init
        git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
        git config --global user.email "my-bot@bot.com"
@@ -18,13 +18,12 @@ jobs:
        git checkout master
        git branch --set-upstream-to=origin/master
        git pull
-       ls -lart
-       echo $Random >> Random.txt
-       ls -lart
+       ls -a
+       echo $RANDOM >> Random.txt
+       ls -a
        git add -A
        git commit -m "Random file"
        git push
-       echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
 
     - name: Create issue using REST API
       run: |
