--- a/.github/workflows/Env.yml
+++ b/.github/workflows/Env.yml
@@ -14,16 +14,17 @@ jobs:
        git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
        git config --global user.email "my-bot@bot.com"
        git config --global user.name "my-bot"
-       git fetch
-       git checkout master
-       git branch --set-upstream-to=origin/master
-       git pull
-       ls -a
-       echo $RANDOM >> Random.txt
-       ls -a
-       git add -A
-       git commit -m "Random file"
-       git push
+      # git fetch
+      # git checkout master
+      # git branch --set-upstream-to=origin/master
+      # git pull
+      # ls -a
+      # echo $RANDOM >> Random.txt
+      # ls -a
+      # git add -A
+      # git commit -m "Random file"
+      # git push
+
 
     - name: Create issue using REST API
       run: |
