--- a/.github/workflows/Env.yml
+++ b/.github/workflows/Env.yml
@@ -21,6 +21,7 @@ jobs:
       # ls -a
       # echo $RANDOM >> Random.txt
       # ls -a
+      # pwd
       # git add -A
       # git commit -m "Random file"
       # git push
