--- a/.github/workflows/Env.yml
+++ b/.github/workflows/Env.yml
@@ -3,40 +3,17 @@ on: [push]
 env:
   WF_ENV: Available to all jobs
 jobs:
-  create_issue:
+  decrypt:
     runs-on: ubuntu-latest
     steps:
-    - name: Push a random file
-      run: |
-       pwd
-       ls -a
-       git init
-       git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
-       git config --global user.email "my-bot@bot.com"
-       git config --global user.name "my-bot"
-      # git fetch
-      # git checkout master
-      # git branch --set-upstream-to=origin/master
-      # git pull
-      # ls -a
-      # echo $RANDOM >> Random.txt
-      # ls -a
-      # pwd
-      # git add -A
-      # git commit -m "Random file"
-      # git push
+        - uses: action/checkout@v1
+        - name: decrypt file
+          run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output="$HOME/secrets.json secrets.json.gpg"
+          env:
+           PASSPHRASE: ${{ secrets.PASSPHRASE }}
+        - name: Print out file contents
+          run: cat $HOME/secrets.json
 
-
-    - name: Create issue using REST API
-      run: |
-        curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/issues \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-        --header 'content-type: application/json' \
-        --data '{
-          "title": "Automated issue for commit: ${{ github.sha }}",
-          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
-          }'
   log-env:
       runs-on: ubuntu-latest
       env:
