--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,7 +4,11 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix: 
+        os: [macos-latest , ubuntu-latest , wwindows-latest]
+        node-version: [ 6 , 8 , 10 ]
+    runs-on: {{ matrix.os }}
     steps:
         - name: Log node version
           run: node -v
