--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -8,12 +8,12 @@ jobs:
       matrix: 
         os: [macos-latest , ubuntu-latest , wwindows-latest]
         node-version: [ 6 , 8 , 10 ]
-    runs-on: {{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
         - name: Log node version
           run: node -v
         - uses: actions/setup-node@v1
           with:
-            node-version: '8'
+            node-version: ${{ matrix.node-version}}
         - name: Log node version
           run: node -v
