--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,13 +1,12 @@
 name: Actions Workflow
 
 on:
+  repository_dispatch:
 
   # schedule:
   #  - cron: "0/5 * * * *"
   #  - cron: "0/6 * * * *"
-
-  # push:
-
+  
   pull_request:
       types: [closed, opened, reopened, assigned]
 
