--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -5,13 +5,17 @@ on: push
 jobs:
   node-docker:
     runs-on: ubuntu-latest
-    container:
-      image: node:12.19.0-alpine3.10
-
+    services:
+      app:
+        image: alialaa17/node-api
+        ports:
+          - 3001:3000
+      mongodb:
+        image: mongodb
+        ports:
+            - 27017:27017
     steps:
-        - name: Log Node Version
-          run: | 
-            node -v
-            npm -v
-            cat /etc/os-release
-
+        - name: Post a user
+          run: 'curl -X POST http://localhost:3001/api/user -H ''Content-type: application/json'' -d '' {"username": "hello" , "address:" "abcabc" }'''
+        - name: Get users
+          run: curl http://localhost:3001/api/users
