--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,6 +3,25 @@ name: Container
 on: push
 
 jobs:
+  docker-steps:
+    runs-on: ubuntu-latest
+    container:
+      image: node:14.13.1-alpine3.10
+    steps:
+      - name: log node version
+        run: node -v
+      - name: step with docker
+        uses: docker://node:12.19.0-alpine3.10
+        run: node -v
+        with: 
+          entrypoint: '/bin/echo'
+          arg: 'Hello World'
+      - name: Log node version 2 
+        uses: docker://node:12.19.0-alpine3.10
+        run: node -v
+        with: 
+          entrypoint: '/usr/local/bin/node'
+          args: '-v'
   node-docker:
     runs-on: ubuntu-latest
     services:
