--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker://node:12.19.0-alpine3.10
         with: 
           entrypoint: '/bin/echo'
-          arg: 'Hello World'
+          arg: "Hello World"
       - name: Log node version 2 
         uses: docker://node:12.19.0-alpine3.10
         with: 
