--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   docker-steps:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: node:14.13.1-alpine3.10
     steps:
@@ -21,7 +21,7 @@ jobs:
           entrypoint: '/usr/local/bin/node'
           args: '-v'
   node-docker:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     services:
       app:
         image: alialaa17/node-api
