--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,9 +1,9 @@
 name: Context 
-on: pull_request
+on: push
 
 jobs:
   one:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Dump GitHub context
         env:
